--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 {% extends 'template.html' %}
-{% from 'includes/formhelpers.html' import render_field%}
+{% from 'includes/form_helpers.html' import render_field%}
 
 {% block body %}
 <form method="post">
