--- a/templates/template.html
+++ b/templates/template.html
@@ -7,7 +7,7 @@
     <body>
         
         {% include "includes/navbar.html" %}
-
+        <div class="container">{% include "includes/flash_message.html" %}</div>
         <div class="template">
             {% block body %}
             {% endblock  %}
