--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -7,12 +7,18 @@
         <ul class="navbar-nav mr-auto">
         </ul>
         <ul class="navbar-nav ml-auto">
+          {% if current_user.is_authenticated%}
+            <li class="nav-item">
+              <a class="nav-link" href="/logout">Logout</a>
+            </li>
+          {% else %}
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/register">Register</a>
             </li>
+          {% endif %}
         </ul>
       </div>
     </div>
