--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,2 +1,30 @@
 {% extends 'template.html' %}
-<p>Hello</p>
+
+{% block body %}
+    <h3> Dashboard </h3>
+    <a href="/addarticle"><button type="submit" class="btn btn-dark">Add Article</button></a>
+    <hr>
+    {% if articles %}
+        <table class="table">
+            <thead class="thead-dark">
+            <tr>
+                <th scope="col">#Article ID</th>
+                <th scope="col">Title</th>
+                <th scope="col">Username</th>
+                <th scope="col">Created Date</th>
+            </tr>
+            </thead>
+            <tbody>
+                {% for article in articles %}
+                    <tr>
+                        <th scope="row">{{article.article_id}}</th>
+                        <td>{{article.title}}</td>
+                        <td>{{article.username}}</td>
+                        <td>{{article.created_date}}</td>
+                    </tr>
+                {% endfor %}
+            
+            </tbody>
+        </table>
+    {% endif %}
+{% endblock  %}
