--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -5,9 +5,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/dashboard">Dashboard</a>
+          </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          {% if current_user.is_authenticated%}
+          {% if current_user.is_authenticated and session["username"]%}
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
             </li>
