--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <h3> Dashboard </h3>
-    <a href="/addarticle"><button type="submit" class="btn btn-dark">Add Article</button></a>
+    <a href="/add-article"><button type="submit" class="btn btn-dark">Add Article</button></a>
     <hr>
     {% if articles %}
         <table class="table">
